Added form validation

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
     <div id="edit" class="collapse">
         <div class="center-block" style="width: 300px;text-align: left;">
             <br>
-            <form>
+            <form name='registrationForm'>
                 <div class="form-group">
                     <label class="lead min_padding" for="usr">Name :</label>
                     <input type="text" class="form-control" id="usr" required ng-model='participant.name'>
