--- a/dashboard.html
+++ b/dashboard.html
@@ -745,8 +745,8 @@
                             <label class="lead min_padding">Team Size :</label>
                             <input type="number" class="form-control" ng-model="eventsFormData.SY17E009.teamSize">
                         </div>
-                        <label>Beat boxing/Rapping - </label> <input type="checkbox" value="Writing_Contest"><br><br>
-                        <label>Dance - </label> <input type="checkbox" value="Spelling_Bee"><br><br>
+                        <label>Beat boxing/Rapping - </label> <input type="checkbox" value="Beat_Boxing"><br><br>
+                        <label>Dance - </label> <input type="checkbox" value="Dance"><br><br>
                     </div>
                     <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E009', 'Hip-Hop-Street')">Register</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E009')">Close</button>
@@ -767,7 +767,7 @@
                     <br>
                     <div class="center-block" style="width:300px;text-align: left">
                         <div class="form-group">
-                            <label class="lead min_padding">Team Size :</label>
+                            <label class="lead min_padding">Group Size :</label>
                             <input type="text" class="form-control" ng-model="eventsFormData.SY17E017.teamSize">
                         </div>
                         <div class="form-group">
