Some Changes(Final)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                             <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
                             <!--<li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li> -->
                             <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
+                            <li class="nav-item"><a class="nav-link link"
+                                                    style="border: #1098F7 solid 2.5px;padding: 10px;background-color:#1098F7;color: white;border-radius: 22px;"
+                                                    href="https://synapse-pass-registration.firebaseapp.com/"
+                                                    target="_blank">GET
+                                INVITES</a></li>
                         </ul>
                         <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
                                 data-target="#exCollapsingNavbar">
@@ -173,12 +178,11 @@
                             <p class="info-content"></p>
                             <h2 class="info-subheading">CYNOSURE</h2>
                             <p class="info-content2">Watch some of the best performers of the country set the
-                                stage on fire with their mesmerising music.</p>
+                                stage on fire with their mesmerising music.</p><br>
                         </div>
                     </div>
-                    <a class="home-button">
-                        <button type="button" class="bott btn-primary btn-md center-block" data-toggle="modal"
-                                data-target="#inaugural">GET PASS
+                    <a class="home-button" href="event.html">
+                        <button type="button" class="bott btn-primary btn-md center-block">VIEW
                         </button>
                     </a>
                 </div>
@@ -217,9 +221,8 @@
                         country are in the house to transcend
                         the crowd</p>
                 </div>
-                <a class="home-button">
-                    <button type="button" class="bott btn-primary btn-md center-block" data-toggle="modal"
-                            data-target="#inaugural">GET PASS
+                <a class="home-button" href="https://synapse-pass-registration.firebaseapp.com/" target="_blank">
+                    <button type="button" class="bott btn-primary btn-md center-block">GET INVITE
                     </button>
                 </a>
             </div>
@@ -233,9 +236,8 @@
                     <p class="info-content2">Unbelievable guitar solos,thundering bass takes the
                         night by storm as the crowd transforms into a sea of head bangers.</p>
                 </div>
-                <a class="home-button">
-                    <button type="button" class="bott btn-primary btn-md center-block" data-toggle="modal"
-                            data-target="#inaugural">GET PASS
+                <a class="home-button" href="https://synapse-pass-registration.firebaseapp.com/" target="_blank">
+                    <button type="button" class="bott btn-primary btn-md center-block">GET INVITE
                     </button>
                 </a>
             </div>
@@ -250,9 +252,8 @@
                         Resurrection,
                         Bhayanak Maut, Undying Inc. and more.</p>
                 </div>
-                <a class="home-button">
-                    <button type="button" class="bott btn-primary btn-md center-block" data-toggle="modal"
-                            data-target="#inaugural">GET PASS
+                <a class="home-button" href="https://synapse-pass-registration.firebaseapp.com/" target="_blank">
+                    <button type="button" class="bott btn-primary btn-md center-block">GET INVITE
                     </button>
                 </a>
             </div>
@@ -525,7 +526,7 @@
                     <h2 class="info-subheading">HEADRUSH</h2>
                     <p class="info-content2">Work up those grey cells and test your logic and knowledge with quizzes
                         that
-                        satisfy your interests with participants from IIM’s and IIT’s</p>
+                        satisfy everyone's intrests.<br><br></p>
                 </div>
                 <a class="home-button" href="register.html">
                     <button type="button" class="bott center-block">REGISTER</button>
@@ -955,11 +956,11 @@
                     <div class="container">
                         <h3 class="heading2">RULES</h3>
                         <ul class="lead min_padding" style="text-align:left;">
-                            <li>Only one round will be held on 16th February 2017
+                            <li>Only one round will be held on 20th February 2017
                             </li>
-                            <li>Time: 9:30pm to 12:00am
+                            <li>Time: 9:00pm to 12:00am
                             </li>
-                            <li>Event Site: Hackerearth (Link yet to be generated).
+                            <li>Event Site: https://www.hackerearth.com/challenge/college/code-mutants-17/
                             </li>
                         </ul>
                         <h3 class="heading2">Event Guidelines (ACM Style Ranklist)</h3>
@@ -990,7 +991,8 @@
                             Email : <b>codemutants2k17@gmail.com</b>
                         </p>
                     </div>
-                    <a type="button" class="btn btn-secondary" href="https://hackerearth.com/codemutants/"
+                    <a type="button" class="btn btn-secondary"
+                       href="https://www.hackerearth.com/challenge/college/code-mutants-17/"
                        target="_blank">Register</a>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
@@ -1113,6 +1115,7 @@
                                 water) are
                                 not allowed.
                             </li>
+                            <li>Beat Boxing will be done if there are enough participation.</li>
                         </ul>
                         <br>
                         <h5>Kindly carry your college ID. Any participant that fails to do so may be prevented
@@ -1216,10 +1219,20 @@
                             </li>
                             <li> In case of any ambiguity the co-ordinators’ decisions will be final.</li>
                         </ul>
+                        <h3 class="heading2">JUDGING CRITERIA</h3>
+                        <ul class="lead min_padding" style="text-align:left;">
+                            <li>Style : Expressions and Movements</li>
+                            <li>Choreography</li>
+                            <li>Costumes</li>
+                            <li>Coherence and Synchronisation</li>
+                            <li>Overall Appeal</li>
+                            <li> In case of any ambiguity the co-ordinators’ decisions will be final.</li>
+                        </ul>
                         <h3 class="heading2">CONTACT</h3>
                         <p class="lead min_padding">
                             Prithvi Patel : 7359084811<br>
-                            Brinda Jena : 7227895355
+                            Brinda Jena : 7227895355<br>
+                            Email : <b>Naach.synapse.2017@gmail.com</b>
                         </p>
                     </div>
                     <a type="button" class="btn btn-secondary" href="register.html">Register</a>
@@ -1550,45 +1563,47 @@
                             </li>
                             <li>The props must come on with the performance and must not require extensive setup.
                             </li>
-                            <li>Teams are suggested to inform the organizers of any kind of props they are planning to
-                                use.
+                            <li>Participants are suggested to inform the organizers of any kind of props they are
+                                planning to use.
                             </li>
-                            <li>Use of water, fire, pets or any hazardous materials (such as smoke, fog devices, knives)
-                                is
-                                not allowed. Teams are instructed to consult the organizers before using any such
-                                material.
-                                They will be allowed to use them only if the organisers agree.
+                            <li>Use of water, fire, pets or any hazardous materials (such as smoke and knives) is not
+                                allowed. Participants are instructed to consult the organizers before using any such
+                                material. They will be allowed to use them only if the organisers agree.
                             </li>
                         </ul>
                         <h3 class="heading2">General Points</h3>
                         <ul class="lead min_padding" style="text-align:left;">
+                            <li>Individual participants HAVE TO <b>CHANGE THEIR ATTIRE</b> if they are also
+                                participating with
+                                a team. They are not required to follow the theme but can, however, use props as
+                                required.
+                            </li>
                             <li>Participants are required to check the website frequently for any changes in the rules
-                                and
-                                regulations and specification of arena of the event.
+                                and regulations and specification of arena of the event.
                             </li>
                             <li>The teams must bring their own music system for practice. The organizing team is not
                                 responsible for providing either space or music system for practice.
                             </li>
-                            <li>Makeup and styling of the models are to be done by the team themselves. We will only
-                                provide
-                                every team with dressing room.
-                            </li>
-                            <li>One member of the team should sit with sound technician or computer operator during the
-                                performance.
+                            <li>Makeup and styling of the models are to be done by the teams themselves. We will only
+                                provide the team with dressing room.
                             </li>
                             <li>The pen drive should include details about the team name and college name.
                             </li>
-                            <li>Teams can ask for assistance from people outside the college such as choreographers,
-                                make-up
-                                artists, but these professionals will not be considered to be a part of the team.
+                            <li>Team can ask for assistance from people outside the college such as choreographers,
+                                make-up artists, but these professionals will not be considered to be a part of the
+                                team.
+                            </li>
+                            <li>One member of the team should sit with sound technician or computer operator during the
+                                performance (in case of team performance).
                             </li>
                             <li>We request to maintain the decorum of the event. Vulgarity of any kind would lead to
                                 disqualification of the team from the event. Hence, if the team feels that any stunt or
                                 costume design can be considered as vulgar, it is strongly advised to consult the
-                                organizers
-                                before performing it on stage. The decision of the organizers will be final in case of
-                                any
-                                disputes arising due to this.
+                                organizers before performing it on stage. The decision of the organizers will be final
+                                in case of any disputes arising due to this.
+                            </li>
+                            <li>The theme taken up by the team should not hurt the religious sentiments of any
+                                community.
                             </li>
                             <li>No animals or birds should be harmed in the making the designs. Doing so will lead to
                                 immediate disqualification.
