--- a/dashboard.html
+++ b/dashboard.html
@@ -782,6 +782,29 @@
 
         </div>
     </div>
+    <!-- FIFA -->
+    <div class="modal fade" id="SY17E018" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h2 class="heading padding">FIFA-14</h2>
+                    <hr class="under_head">
+                    <br>
+                    <div class="center-block" style="width:300px;text-align: left">
+                        <div class="form-group">
+                            <label class="lead min_padding">Player Name :</label>
+                            <input type="text" class="form-control" ng-model="eventsFormData.SY17E018.Name">
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-success" ng-click="registerEvent('SY17E018', 'FIFA-14')">Register</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="closeModal('#SY17E018')">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js" charset="utf-8"></script>
