--- a/sponsor.html
+++ b/sponsor.html
@@ -60,6 +60,11 @@
                         <li class="nav-item"><a class="nav-link link" href="contact_us.html">CONTACT US</a></li>
                         <li class="nav-item"><a class="nav-link link" href="sponsor.html">SPONSORS</a></li>
                         <li class="nav-item"><a class="nav-link link" href="register.html">REGISTER</a></li>
+                        <li class="nav-item"><a class="nav-link link"
+                                                style="border: #1098F7 solid 2.5px;padding: 10px;background-color:#1098F7;color: white;border-radius: 22px;"
+                                                href="https://synapse-pass-registration.firebaseapp.com/"
+                                                target="_blank">GET
+                            INVITES</a></li>
                     </ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse"
                             data-target="#exCollapsingNavbar">
